--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -20,6 +20,11 @@
 @import url("../icons/flaticon/flaticon.css");
 @import url("../icons/themify/themify-icons.css");
 @import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   --primary: #c6a47e;
   --secondary: #212529;
