--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1,7 +1,7 @@
 :root {
   --ideal-font: "Kumbh Sans", sans-serif;
   --ideal-font-2: "Domine", serif;
-  --ideal-base: #f37e21;
+  --ideal-base: #57b7c0;
   --ideal-base-rgb: 243, 126, 33;
   --ideal-black: #392917;
   --ideal-black-rgb: 57, 41, 23;
