--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -682,6 +682,10 @@
   line-height: 40px;
 }
 
+.sec-title__text {
+  font-size: 20px;
+}
+
 /* Responsive Styles */
 @media (max-width: 767px) {
   .your-project-one__wrapper {
