--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -475,7 +475,7 @@
 }
 
 .best-logistics-one__content-counter li h2 {
-  color: var(--alori-base);
+  color: var(--ideal-base);
   font-size: 50px;
   line-height: 1em;
   margin-bottom: 10px;
@@ -486,7 +486,7 @@
   display: inline-block;
   bottom: 3px;
   padding-left: 2px;
-  color: var(--alori-black);
+  color: var(--ideal-black);
   font-size: 12px;
   font-weight: 700;
 }
@@ -502,7 +502,7 @@
 }
 
 .best-logistics-one__content-counter-text {
-  color: rgba(var(--alori-gray-rgb), 0.8);
+  color: rgba(var(--ideal-gray-rgb), 0.8);
   font-size: 16px;
   line-height: 26px;
 }
@@ -568,7 +568,7 @@
 
 .best-logistics-one__content-bottom-btn .thm-btn {
   background: #ffffff;
-  color: var(--alori-gray);
+  color: var(--ideal-gray);
   font-size: 16px;
   text-transform: capitalize;
   padding: 11px 30px 10px;
@@ -684,6 +684,143 @@
 
 .sec-title__text {
   font-size: 20px;
+}
+
+/***
+=============================================
+    Services One
+=============================================
+***/
+.services-one {
+  position: relative;
+  display: block;
+  background: #ffffff;
+  padding: 120px 0px 90px;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.services-one__single {
+  position: relative;
+  display: block;
+  background: #ffffff;
+  -webkit-box-shadow: 0px 0px 26px 0px rgba(215, 212, 212, 0.35);
+  box-shadow: 0px 0px 26px 0px rgba(215, 212, 212, 0.35);
+  padding: 65px 15px 55px;
+  border-radius: 5px;
+  margin-bottom: 30px;
+  z-index: 1;
+}
+
+.services-one__single::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  content: "";
+  background-color: transparent;
+  border: 1px solid var(--ideal-black);
+  border-radius: 5px;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+  -webkit-transform: scaleY(0);
+  transform: scaleY(0);
+  z-index: -1;
+}
+
+.services-one__single:hover:before {
+  -webkit-transform: scaleY(1);
+  transform: scaleY(1);
+}
+
+.services-one__single-icon {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 23px;
+  transition: all 500ms ease 0.1s;
+  z-index: 1;
+}
+
+.services-one__single:hover .services-one__single-icon {
+  transform: rotateY(180deg);
+  transition: all 500ms ease 0.1s;
+}
+
+.services-one__single-icon::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  background: #ecfdfe;
+  z-index: -1;
+}
+
+.bg2.services-one__single-icon::before {
+  background: #ffe9e0;
+}
+.bg3.services-one__single-icon::before {
+  background: #fff6e5;
+}
+.bg4.services-one__single-icon::before {
+  background: #fcebe5;
+}
+.bg5.services-one__single-icon::before {
+  background: #ecf0ec;
+}
+.bg6.services-one__single-icon::before {
+  background: #fcf1f7;
+}
+
+.services-one__single-icon span::before {
+  position: relative;
+  display: inline-block;
+  color: var(--ideal-black);
+  font-size: 85px;
+  line-height: 85px;
+}
+
+.services-one__single h2 {
+  font-size: 30px;
+  line-height: 40px;
+  font-weight: 400;
+}
+
+.services-one__single h2 a {
+  color: var(--ideal-black);
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+  -webkit-transition-delay: 0.1s;
+  transition-delay: 0.1s;
+}
+
+.services-one__single h2 a:hover {
+  color: var(--ideal-base);
+}
+
+.services-one__single .text {
+  position: relative;
+  display: block;
+  margin-top: 16px;
+}
+
+.services-one__single .text p {
+  font-size: 18px;
+}
+
+.sec-title__title {
+  color: var(--ideal-black);
+  font-size: 50px;
+  line-height: 1.2em;
+  font-weight: 700;
+  margin-bottom: 27px;
 }
 
 /* Responsive Styles */
