Fixed Home Page

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -25548,7 +25548,7 @@ footer .widget_services ul li:hover {
   background-size: 100%;
 }
 .site-footer.style-1 .footer-top {
-  padding: 120px 0 90px;
+  padding: 0 0 90px;
 }
 .site-footer.style-1 .footer-top .text {
   margin: 0 50px 45px;
