--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -358,12 +358,14 @@
   position: relative;
   display: block;
   padding-top: 6px;
+  font-size: 17px;
   border-top: 1px solid #e9e9e9;
 }
 
 .about-two__content-text2 {
   position: relative;
   display: block;
+  font-size: 17px;
   padding-top: 16px;
 }
 
@@ -678,10 +680,8 @@
 .services-one__single {
   position: relative;
   display: block;
-  background: #ffffff;
   -webkit-box-shadow: 0px 0px 26px 0px rgba(215, 212, 212, 0.35);
   box-shadow: 0px 0px 26px 0px rgba(215, 212, 212, 0.35);
-  padding: 65px 15px 55px;
   border-radius: 5px;
   margin-bottom: 30px;
   z-index: 1;
@@ -695,12 +695,12 @@
   bottom: 0;
   content: "";
   background-color: transparent;
-  border: 1px solid var(--ideal-black);
+  /* border: 1px solid var(--ideal-black);
   border-radius: 5px;
   -webkit-transition: all 500ms ease;
-  transition: all 500ms ease;
-  -webkit-transform: scaleY(0);
-  transform: scaleY(0);
+  transition: all 500ms ease; */
+  /* -webkit-transform: scaleY(0); */
+  /* transform: scaleY(0); */
   z-index: -1;
 }
 
@@ -883,7 +883,7 @@
   position: relative;
   display: inline-block;
   color: var(--ideal-primary);
-  font-size: 16px;
+  font-size: 18px;
   line-height: 26px;
   font-weight: 500;
   text-transform: uppercase;
